# cpp_academy

./: Makefile  README.md  TODO.md  apaga.sh  conanfile.py  flight_data.csv  meson.build  meson_options.txt
design-of-pattern/command/: editor.hpp  main.cpp  meson.build
docs/: Doxyfile.in  meson.build
proto/: common.proto  meson.build
python/standalone/: academy_module.cpp  meson.build  pyproject.toml
src/: hello_world.cpp  main.cpp  meson.build
src/asm_course/: 01_registers.cpp  02_memory.cpp  03_arithmetic.cpp  04_bitwise.cpp  05_control_flow.cpp  06_stack_asm.s  06_stack_frames.cpp  07_calling_asm.s  07_calling_conv.cpp  08_simd_asm.s  08_simd_sse.cpp  09_avx_asm.s  09_simd_avx.cpp  10_string_asm.s  10_string_ops.cpp  11_syscall_asm.s  11_syscalls.cpp  12_fp_x87.cpp  12_x87_asm.s  13_opt_asm.s  13_optimization.cpp  14_disassembly.cpp  15_capstone.cpp  15_capstone_asm.s  meson.build
src/aws/: README.md
src/aws/s3/: main.cpp  meson.build
src/calculus/: README.md  main.cpp  meson.build
src/casts/: README.md  demo_c_style.hpp  demo_const_cast.hpp  demo_dynamic_cast.hpp  demo_reinterpret_cast.hpp  demo_static_cast.hpp  main.cpp  meson.build
src/collision/: README.md  main.cpp  meson.build
src/concepts/: README.md  demo_basics.hpp  demo_constraints.hpp  demo_real_world.hpp  demo_requires.hpp  main.cpp  meson.build
src/concurrency/: README.md  demo_atomics.hpp  demo_condition.hpp  demo_futures.hpp  demo_mutex.hpp  demo_patterns.hpp  demo_threads.hpp  main.cpp  meson.build
src/coroutines/: README.md  demo_asio.hpp  demo_generator.hpp  demo_internals.hpp  demo_task.hpp  main.cpp  meson.build
src/database/: README.md  db.cpp  db.hpp  main.cpp  meson.build
src/design-of-pattern/: README.md  meson.build
src/design-of-pattern/chain/: auth_handler.cpp  handler.hpp  meson.build  rate_limit_handler.hpp  validation_handler.hpp
src/design-of-pattern/command/: command.hpp  delete_command.cpp  delete_command.hpp  editor.cpp  history.cpp  history.hpp  insert_command.cpp  insert_command.hpp  replace_command.cpp  replace_command.hpp
src/design-of-pattern/decorator/: compression.hpp  file_stream.hpp  logging.hpp  main.cpp
src/design-of-pattern/factory/: circle.cpp  shape_factory.hpp
src/design-of-pattern/interpreter/: README.md  expression.hpp  main.cpp  meson.build  parser.hpp  program.hpp
src/design-of-pattern/iterator/: iterable.hpp  iterator.hpp  main.cpp  meson.build  playlist.hpp  playlist_iterators.hpp  song.hpp
src/design-of-pattern/null_object/: README.md  main.cpp  meson.build  null_object.hpp
src/design-of-pattern/observer/: logger.cpp  logger.hpp  main.cpp  meson.build  monitor.hpp
src/design-of-pattern/singleton/: README.md  main.cpp  meson.build  singleton.hpp
src/design-of-pattern/state/: main.cpp  meson.build  tcp_connection.cpp  tcp_connection.hpp  tcp_state.cpp  tcp_state.hpp  tcp_states.cpp  tcp_states.hpp
src/design-of-pattern/strategy/: main.cpp  meson.build  quick_sort.hpp  sort_context.cpp  sort_context.hpp  sorter.hpp
src/doxygen/: Doxyfile.in  README.md  main.cpp  math_utils.hpp  meson.build
src/ecs/: README.md  component_store.hpp  components.hpp  entity.hpp  main.cpp  meson.build  systems.hpp  world.hpp
src/embed-python/: README.md  main.cpp  meson.build
src/embed-python/scripts/: hello.py
src/file_io/: README.md  demo_filesystem.hpp  demo_fstream.hpp  demo_iostream.hpp  demo_logging.hpp  demo_sstream.hpp  main.cpp  meson.build
src/flight-simulator/: README.md  autopilot.cpp  autopilot.hpp  fdm.cpp  fdm.hpp  logger.cpp  logger.hpp  main.cpp  meson.build
src/gui/: main.cpp  meson.build
src/http-client/: README.md  http_client.cpp  http_client.hpp  main.cpp  meson.build
src/inline_asm/: README.md  main.cpp  meson.build
src/mandelbrot/: README.md  mainwindow.hpp  mandelbrot_renderer.cpp  mandelbrot_renderer.hpp  meson.build
src/mandelbrot_openmp/: README.md  main.cpp  mainwindow.cpp  mandelbrot_renderer.cpp  mandelbrot_renderer.hpp  meson.build
src/memory/: README.md  demo_arena_allocator.hpp  demo_new_delete.hpp  demo_pmr.hpp  demo_pool_allocator.hpp  main.cpp  meson.build
src/network/: README.md  demo_http_raw.hpp  demo_tcp_async.hpp  demo_tcp_sync.hpp  demo_timer.hpp  demo_udp.hpp  main.cpp  meson.build
src/outline_asm/: README.md  asm_funcs.hpp  asm_funcs.s  main.cpp  meson.build
src/parser/: README.md  example.txt  lexer.l  main.cpp  meson.build  parser.y
src/plugin_registry/: README.md  icontroller.hpp  main.cpp  meson.build  plugin_registry.hpp
src/plugin_registry/plugins/: lqr_controller.cpp  meson.build  pid_controller.cpp
src/python/: README.md  academy_cpython.cpp  meson.build  requirements.txt
src/python/standalone/: meson.build  pyproject.toml
src/qt/: mainwindow.cpp  mainwindow.ui  meson.build  sfml_widget.hpp
src/qt_sfml/: README.md  main.cpp  mainwindow.cpp  mainwindow.hpp  meson.build  sfml_widget.cpp  sfml_widget.hpp
src/qt_sfml2/: README.md  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  meson.build  physics_world.cpp  physics_world.hpp  sfml_widget.cpp  sfml_widget.hpp
src/rabbitmq/: README.md  consumer.cpp  docker-compose.yml  docker_rabbitmq.sh  meson.build  producer.cpp
src/sandbox/: README.md  greeter.cpp  main.cpp  meson.build
src/sfml_bullet/: README.md  main.cpp  meson.build  physics_world.cpp  physics_world.hpp  simulation.cpp  simulation.hpp  src_meson.build
src/sfml_bullet2/: README.md  main.cpp  meson.build  physics_world.cpp  physics_world.hpp  ragdoll.cpp  ragdoll.hpp  rope.cpp  rope.hpp  simulation.cpp  simulation.hpp
src/smart-pointers/: README.md  demo_patterns.hpp  demo_shared.hpp  demo_unique.hpp  demo_weak.hpp  main.cpp  meson.build
src/solid/: meson.build
src/solid/srp/: README.md  demo_actors.hpp  demo_functions.hpp  demo_pipeline.hpp  demo_violation.hpp  (+3 more)
src/templates/: README.md  demo_basics.hpp  demo_crtp.hpp  demo_sfinae.hpp  demo_specialization.hpp  demo_type_traits.hpp  demo_variadic.hpp  main.cpp  meson.build
src/yolo/: README.md  export_yolo.py  main.cpp  meson.build  yolov10.hpp
subprojects/imgui/: meson.build
(+46 files in other folders)
