subdir('aws/s3')
# subdir('calculus')
# subdir('casts')
# subdir('collision')
# subdir('concurrency')
# subdir('database')
# subdir('design-of-pattern')
# subdir('ecs')
# subdir('http-client')
# subdir('memory')
# subdir('parser')
# subdir('python')
# subdir('network')
# subdir('qt_sfml')
# subdir('qt_sfml2')
# subdir('sandbox')
# subdir('sfml_bullet')
# subdir('sfml_bullet2')
# subdir('smart-pointers')
# subdir('templates')
subdir('yolo')
