# subdir('asm_course') #
# subdir('aws/s3') #
subdir('calculus')
subdir('casts')
subdir('collision')
# subdir('concepts') #
subdir('concurrency')
# subdir('database') #
subdir('design-of-pattern')
subdir('ecs')
subdir('embed-python')
subdir('flight-simulator')
subdir('http-client')
subdir('inline_asm')
subdir('mandelbrot')
subdir('mandelbrot_openmp')
subdir('memory')
subdir('outline_asm')
subdir('parser')
subdir('plugin_registry')
subdir('python')
subdir('network')
subdir('qt_sfml')
subdir('qt_sfml2')
# subdir('rabbitmq') #
subdir('sandbox')
subdir('sfml_bullet')
subdir('sfml_bullet2')
subdir('smart-pointers')
subdir('templates')
subdir('yolo')